Bug 410602 - Small Color Selector is missing in 4.2.5
Summary: Small Color Selector is missing in 4.2.5
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: 4.2.5
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-05 11:52 UTC by wolthera
Modified: 2019-08-07 06:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2019-08-05 11:52:32 UTC
SUMMARY
The small color selector docker isn't available in git master. We're seeing this at the Krita sprint, in both Linux and Windows.

STEPS TO REPRODUCE
1. Try to activate the small color selector in settings->dockers.
2. Observe it's missing.
3. Observe the libraries for it are being made, so the plugin itself is not missing.
Comment 1 Halla Rempt 2019-08-05 11:59:18 UTC
Actually, on my desktop system it's there...
Comment 2 wolthera 2019-08-05 12:01:13 UTC
Weird...

My hardware info:
========================================
Krita

 Version: 4.3.0-prealpha (git 8bd149b)
 Languages: en_US, en_GB, nl
 Hidpi: true

Qt

  Version (compiled): 5.12.3
  Version (loaded): 5.12.3

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 4.15.0-55-generic
  Pretty Productname: KDE neon User Edition 5.16
  Product Type: neon
  Product Version: 18.04


Hardware Information

  GPU Acceleration: auto
  Memory: 7725 Mb
  Number of Cores: 8
  Swap Location: /tmp
Comment 3 Halla Rempt 2019-08-05 14:34:19 UTC
Git commit b7872b8a4bc079d31f252af7dd27f3788fc2920f by Boudewijn Rempt.
Committed on 05/08/2019 at 14:34.
Pushed by rempt into branch 'master'.

Enable the small color selector if opengles is available as well

M  +1    -1    plugins/dockers/smallcolorselector/smallcolorselector.cc

https://invent.kde.org/kde/krita/commit/b7872b8a4bc079d31f252af7dd27f3788fc2920f
Comment 4 Halla Rempt 2019-08-07 06:01:04 UTC
Git commit 76fce4a9be8099f10d4d1636d765d0c1b3cd574a by Boudewijn Rempt.
Committed on 07/08/2019 at 06:00.
Pushed by rempt into branch 'krita/4.2'.

Enable the small color selector if opengles is available as well

M  +1    -1    plugins/dockers/smallcolorselector/smallcolorselector.cc

https://invent.kde.org/kde/krita/commit/76fce4a9be8099f10d4d1636d765d0c1b3cd574a