Enable the small color selector if opengles is available as well

BUG:410602